abm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abm
  namespace: agricore
spec:
  selector:
    matchLabels:
      app: abm
  template:
    metadata:
      labels:
        app: abm
    spec:
      containers:
        - name: abm
          image: # TO_MODIFY: Replace with the container image (e.g., <registry>/<image>:<tag>)
          imagePullPolicy: Always
      imagePullSecrets:
        - name: # TO_MODIFY: Replace with the image pull secret name (e.g., <secret-name>)
---
# Postgres deployment 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abm-postgres
  namespace: agricore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abm-postgres
  template:
    metadata:
      labels:
        app: abm-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          volumeMounts:
            - name: abm-postgres-vol
              mountPath: /var/lib/postgresql/data
            - mountPath: /dev/shm
              name: dshm
          resources:
            requests:
              memory: "8Gi"
              cpu: "1"
            limits:
              memory: "64Gi"
              cpu: "6"
      volumes:
        - name: abm-postgres-vol
          persistentVolumeClaim:
            claimName: abm-postgres-pvc
        - name: dshm
          emptyDir:
            medium: Memory
